force-app/main/default/objects/OTP__c/OTP__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This object is used to store the OTP information.</description>
    <label>OTP_Storage</label>
</CustomObject>