force-app/main/default/objects/OTP__c/fields/Expiration_Time__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Time__c</fullName>
    <description>Stores the creation time of the OTP</description>
    <label>Expiration Time</label>
    <type>DateTime</type>
</CustomField>