force-app/main/default/objects/OTP__c/fields/Is_Expired__c.field-meta.xml
<CustomField>
    <fullName>Is_Expired__c</fullName>
    <label>Is Expired</label>
    <length>6</length>
    <type>Text</type>
</CustomField>