force-app/main/default/objects/OTP__c/fields/No_of_Trials__c.field-meta.xml
<CustomField>
    <fullName>No_of_Trials__c</fullName>
    <description>Holds the number of trials for the otp.</description>
    <label>No of Trials</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>