force-app/main/default/objects/OTP__c/fields/OTP_Code__c.field-meta.xml
<CustomField>
    <fullName>OTP_Code__c</fullName>
    <description>OTP code for the user.</description>
    <label>OTP Code</label>
    <length>90</length>
    <type>Text</type>
</CustomField>